[package]
name = "spritesheet_detector"
version = "0.1.1"
authors = ["mirsella <mirsella@protonmail.com>"]
edition = "2024"
description = "A library to analyze spritesheets and detect sprite dimensions and frame count."
repository = "https://github.com/mirsella/spritesheet_detector"
keywords = ["gamedev", "bevy", "spritesheet", "animation"]
license = "MIT"

[dependencies]
image = "0.25"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
