[package]
name = "spritesheet_detector"
version = "0.3.0"
authors = ["mirsella <mirsella@protonmail.com>"]
edition = "2024"
description = "A library to analyze spritesheets and detect sprite dimensions and frame count."
repository = "https://github.com/mirsella/spritesheet_detector"
keywords = ["gamedev", "bevy", "spritesheet", "animation"]
license = "MIT"

[dependencies]
image = "0.25"
num-complex = "0.4.6"
num-traits = "0.2.19"
rustfft = "6.4.1"
serde = { version = "1", features = ["derive"], optional = true }
rayon = "1.10"
itertools = "0.13"

[features]
serde = ["dep:serde"]
